--- a/PagingListViewProject/PagingListView/src/main/res/layout/loading_view.xml
+++ b/PagingListViewProject/PagingListView/src/main/res/layout/loading_view.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loading_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
