--- a/PagingListViewProject/PagingListViewSample/src/main/res/menu/options_menu.xml
+++ b/PagingListViewProject/PagingListViewSample/src/main/res/menu/options_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/start_demo"
-		android:title="@string/start_demo"
-		android:icon="@drawable/ic_action_start"
+	<item android:id="@+id/refresh"
+		android:title="@string/refresh"
+		android:icon="@drawable/ic_action_refresh"
 		android:showAsAction="ifRoom|withText"/>
 </menu>
