--- a/PagingListViewProject/PagingListView/src/main/res/layout/loading_view.xml
+++ b/PagingListViewProject/PagingListView/src/main/res/layout/loading_view.xml
@@ -1,17 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/loading_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_margin="@dimen/loading_view_margin_layout"
-    android:orientation="horizontal">
+<LinearLayout android:id="@+id/loading_view"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_margin="@dimen/loading_view_margin_layout"
+              android:gravity="center"
+              android:orientation="horizontal">
+
     <ProgressBar
         android:id="@+id/video_item_image"
+        style="?android:progressBarStyle"
         android:layout_width="@dimen/loading_view_progress_size"
         android:layout_height="@dimen/loading_view_progress_size"
         android:layout_marginRight="@dimen/loading_view_margin_right"
-        style="?android:progressBarStyle"
         android:indeterminate="true"/>
+
     <TextView
         android:id="@+id/video_item_label"
         android:layout_width="wrap_content"
