--- a/PagingListViewProject/PagingListViewSample/src/main/res/menu/options_menu.xml
+++ b/PagingListViewProject/PagingListViewSample/src/main/res/menu/options_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:id="@+id/refresh"
-		android:title="@string/refresh"
-		android:icon="@drawable/ic_action_refresh"
-		android:showAsAction="ifRoom|withText"/>
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/refresh"/>
 </menu>
